[package]
name = "led_stripe"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embassy-executor = { version = "0.10.0", features = [
    "platform-cortex-m",
    "defmt",
    "executor-interrupt",
    "executor-thread",
] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
panic-halt = "1.0.0"
embassy-nrf = { version = "0.11.0", features = [
    "nrf52833",
    "time-driver-rtc1",
] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
heapless = "0.9.2"
smart-leds = "0.4.0"
rgb = "0.8.53"
static_cell = "2.1.1"
