[package]
name = "rusty_lcd1602"
version = "0.1.0"
edition = "2024"

[dependencies]
hd44780-controller = { version = "0.1.0-alpha.2", features = [
    "fmt",
    "pcf8574-device-async",
] }

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "defmt",
    "executor-interrupt",
    "executor-thread",
] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
panic-halt = "1.0.0"
embassy-nrf = { version = "0.9.0", features = ["nrf52833", "time-driver-rtc1"] }
